# malleable-rust-loader

./: .gitignore  Cargo.lock.old  Cargo.toml  README.md  Untitled-1.md  banner.txt  ctree-new  ctree-new_nodocker  how_to_reduce_size.txt  login.php  overlord.c  winrust.py
config/: initial.json  initial.json.encrypted.aead  initial.json.encrypted.aead.dataop  initial.json.encrypted.aead.dataop.obfuscated  initial.json.encrypted.aead.dataop.obfuscated.dataop  initial.json.webpage.base64  initial.json.zlib
src/: config.rs  create_config.rs  dataoperation.rs  defuse.rs  embedder.rs  initialloader.rs  lib.rs  link.rs  link_util.rs  loaderconf.rs  lsb_text_png_steganography_mod.rs  payload.rs  payload_util.rs  poolink.rs  poollink.rs  python_embedder.rs  runvalue.rs
src/execmode/: dll.rs  executable.rs  run_loader.rs
src/loader/: dll.rs  main.rs
src/lsb_text_png_steganography_mod/: lib.rs
src/run_loader/: bin.rs  dll.rs
