[package]
name = "malleable-rust-loader"
version = "0.1.0"
edition = "2021"
#parallel-compiler = true


[dependencies]
reqwest = { version = "0.12.5", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chksum-sha2-512 = "0.0.0"
ring = "0.17.8"
litcrypt = "0.3.0"
rand = "0.8.5"
libloading = "0.8.5"
zip-extract = "0.1.3"
hex = "0.4.3"
base64 = "0.22.1"
anyhow = "1.0.86"
rot13 = "0.1.1"
regex = "1.10.6"
gethostname = "0.5.0"
log = "0.4.22"
env_logger = "0.10.2"
cryptify = "3.1.1"
argparse = "0.2.2"
pin-project-lite = "=0.2.14"
#image = "0.20"
image = "0.21"
indexmap = "2.6.0"

[target.'cfg(windows)'.dependencies]
memorymodule-rs = "0.0.3"
obfstr = "0.4.3"
windows-sys = { version = "0.45.0" , features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemServices",
    "Win32_System_WindowsProgramming",
    "Win32_System_LibraryLoader",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_System_SystemInformation",
    "Win32_System_Environment",
    "Win32_System_ProcessStatus",
    "Win32_Globalization",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Kernel",
    "Win32_System_Pipes",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_Networking_ActiveDirectory",
]}


[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"


#[lib]
#name = "lsb_text_png_steganography_mod"
#path = "src/lsb_text_png_steganography_mod/lib.rs"


[features]
ollvm = []
logdebug = []
mem1 = []
mem2 = []
mem3 = []
mem4 = []
