[package]
name = "malleable-rust-loader"
version = "0.1.0"
edition = "2021"


[dependencies]
reqwest = { version = "0.12.5", features = ["blocking","json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chksum-sha2-512 = "0.0.0"
ring = "0.17.8"
rand = "0.8.5"
libloading = "0.8.5"
zip-extract = "0.1.3"
hex = "0.4.3"
base64 = "0.22.1"
anyhow = "1.0.86"
rot13 = "0.1.1"
regex = "1.10.6"
gethostname = "0.5.0"
log = "0.4.22"
env_logger = "0.10.2"
cryptify = "3.1.1"
argparse = "0.2.2"
pin-project-lite = "=0.2.14"
#image = "0.20"
image = "0.21"
chrono = { version = "0.4.38", features = ["serde"]}
shellexpand = "3.1.0"
whoami = "1.5.2"
flate2 = "1.0.35"
zerofrom = "=0.1.4"
litemap = "=0.7.3"
yoke = "=0.7.4"
# todo tester le 0.31
sysinfo = "=0.30.0"
aes-gcm-siv = "0.11.1"
ftail = "0.1.2"

[dependencies.uuid]
version = "1.11.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng"          # Use a faster (but still sufficiently random) RNG
]


[target.'cfg(windows)'.dependencies]
memorymodule-rs = "0.0.3"
obfstr = "0.4.3"
windows-sys = { version = "0.45.0" , features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemServices",
    "Win32_System_WindowsProgramming",
    "Win32_System_LibraryLoader",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_System_SystemInformation",
    "Win32_System_Environment",
    "Win32_System_ProcessStatus",
    "Win32_Globalization",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Kernel",
    "Win32_System_Pipes",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_Networking_ActiveDirectory",
]}
windows = { version = "0.54.0", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_SystemServices",
] }


[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"


[features]
loader = []
dll = []
ollvm = []
debug = []
info = []
mem1 = []
mem2 = []
mem3 = []
mem4 = []


[lib]
name = "malleable_rust_loader"
crate-type = ["rlib", "cdylib"]  # Par défaut, "rlib" est suffisant
# TODO comprendre rlib cdylib